--- a/jungle-fi-cli-utils/Cargo.toml
+++ b/jungle-fi-cli-utils/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 anchor-client = "0.25.0"
 anchor-spl = "0.25.0"
+anchor-cli = "0.25.0"
+anchor-syn = "0.25.0"
 serde_json = "1.0.81"
+serde = "1.0.140"
 thiserror = "1.0.31"
 anyhow = "1.0.58"
 spl-token = "3.2.0"
