to camel case inflector crate

--- a/jungle-fi-cli-utils/Cargo.toml
+++ b/jungle-fi-cli-utils/Cargo.toml
@@ -12,6 +12,7 @@ anchor-cli = "0.25.0"
 anchor-syn = "0.25.0"
 serde_json = "1.0.81"
 serde = "1.0.140"
+inflector = "0.11.4"
 thiserror = "1.0.31"
 anyhow = "1.0.58"
 spl-token = "3.2.0"
