--- a/localnet-tools/Cargo.toml
+++ b/localnet-tools/Cargo.toml
@@ -11,10 +11,11 @@ anchor-cli = "0.25.0"
 anchor-spl = "0.25.0"
 anchor-syn = "0.25.0"
 spl-token = "3.2.0"
-solana-sdk = "1.10.29"
-solana-program = "1.10.29"
-solana-account-decoder = "1.10.29"
+solana-sdk = "1.10.34"
+solana-program = "1.10.34"
+solana-account-decoder = "1.10.34"
 Inflector = "0.11.4"
 anyhow = "1.0.66"
 serde_json = "1.0.81"
 serde = "1.0.140"
+toml = "0.5.9"
