readme, comments, tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ members = [
     "genesys_go_rpc_auth",
     "localnet-tools",
     "client-tx-processor",
-    "threadsafe-signer"
+    "threadsafe-signer",
 ]
