--- a/genesys_go_rpc_auth/Cargo.toml
+++ b/genesys_go_rpc_auth/Cargo.toml
@@ -11,3 +11,8 @@ serde = "1.0.140"
 anyhow = "1.0.58"
 anchor-client = "0.25.0"
 solana-sdk = "1.10.29"
+
+[dev-dependencies]
+axum = "0.5.17"
+tokio = "1.14.1"
+hyper = "1.0.0-rc.1"
