adds tests for localnet tools

--- a/tests/localnet-tests/Anchor.toml
+++ b/tests/localnet-tests/Anchor.toml
@@ -2,7 +2,7 @@
 seeds = false
 skip-lint = false
 [programs.localnet]
-test = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+test_program = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
 
 [provider]
 cluster = "localnet"
