--- a/localnet-tools/Cargo.toml
+++ b/localnet-tools/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anchor-client = "0.25.0"
+#anchor-cli = { version = "0.25.0", path = "../../anchor/cli"}
 anchor-cli = "0.25.0"
 anchor-spl = "0.25.0"
 anchor-syn = "0.25.0"
