--- a/localnet-tools/Cargo.toml
+++ b/localnet-tools/Cargo.toml
@@ -12,6 +12,10 @@ anchor-spl = "0.25.0"
 anchor-syn = "0.25.0"
 spl-token = "3.2.0"
 solana-sdk = "1.10.29"
+flate2 = "1.0.24"
+shellexpand = "2.1.0"
+portpicker = "0.1.1"
+solana-faucet = "1.10.29"
 solana-program = "1.10.29"
 solana-account-decoder = "1.10.29"
 Inflector = "0.11.4"
@@ -19,3 +23,4 @@ anyhow = "1.0.66"
 serde_json = "1.0.81"
 serde = "1.0.140"
 toml = "0.5.9"
+clap = { version = "3.1.18", features = ["derive"] }
