--- a/tests/localnet-tests/tests/localnet/Cargo.toml
+++ b/tests/localnet-tests/tests/localnet/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 jungle-fi-localnet-tools = { path = "../../../../localnet-tools" }
 solana-sdk = "^1.10.29"
+solana-client = "^1.10.29"
 anyhow = "1.0.66"
