--- a/tests/localnet-tests/tests/suite-2/Test.toml
+++ b/tests/localnet-tests/tests/suite-2/Test.toml
@@ -7,6 +7,10 @@ address = "LX3EUdRUBUa3TbsYXLEUdj9J3prXkWXvLYSWyYyc2Jj"
 filename = "mint.json"
 
 [[test.validator.account]]
+address = "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v"
+filename = "usdc_mint.json"
+
+[[test.validator.account]]
 address = "QRSsyMWN1yHT9ir42bgNZUNZ4PdEhcSWCrL2AryKpy5"
 filename = "test_user_token_act.json"
 
